added page licenses

--- a/src/components/App/appData.json
+++ b/src/components/App/appData.json
@@ -66,6 +66,55 @@
       "text": "Задачи, связанные с digital-стратегий отдельных продуктов, запуском и поддержкой highload-сервисов, работой с гибридной ИТ-инфраструктурой, управлением растущими объемами данных, аналитикой всех типов. Компания имеет лицензии оператора связи и оператора персональных данных."
     }
   ],
+  "dataLicenses": [
+    {
+      "title": "Лицензия на услуги связи по передаче данных, за исключением услуг связи по передаче данных для целей передачи голосовой информации",
+      "props": [
+          { "title": "Контролирующий орган", "data": "Роскомнадзор" },
+          { "title": "Дата получения", "data": "04.10.2017" },
+          { "title": "Номер подтверждающего документа", "data": "№170388" },
+          { "title": "Срок действия", "data": "30.03.2022" }
+      ]
+    },
+    {
+      "title": "Лицензия на телематические услуги связи",
+      "props": [
+          { "title": "Контролирующий орган", "data": "Роскомнадзор" },
+          { "title": "Дата получения", "data": "04.10.2017" },
+          { "title": "Номер подтверждающего документа", "data": "№170388" },
+          { "title": "Срок действия", "data": "08.09.2020" }
+      ]
+    },
+    {
+      "title": "Единый реестр российских программ для электронных вычислительных машин и баз данных в информационно - телекоммуникационной сети «Интернет»",
+      "props": [
+          { "title": "Министерство цифрового развития, связи и массовых коммуникаций РФ", "data": "Роскомнадзор" },
+          { "title": "Дата получения", "data": "24.04.2019" },
+          { "title": "Номер подтверждающего документа", "data": "Приказ №168 о включении Pass.Media и Uma.Media в реестр" },
+          { "title": "Срок действия", "data": "Нет определенного срока действия" }
+      ]
+    },
+    {
+      "title": "Аккредитация организации, осуществляющей деятельность в области информационных технологий",
+      "props": [
+          { "title": "Контролирующий орган", "data": "Министерство цифрового развития, связи и массовых коммуникаций РФ" },
+          { "title": "Дата получения", "data": "04.10.2017" },
+          { "title": "Номер подтверждающего документа", "data": "Запись №9297" },
+          { "title": "Срок действия", "data": "Нет определенного срока действия" }
+      ]
+    },
+    {
+      "title": "Оператор персональных данных",
+      "props": [
+          { "title": "Контролирующий орган", "data": "Роскомнадзор" },
+          { "title": "Дата выпуска приказа", "data": "28.08.2018" },
+          { "title": "", "data": "" },
+          {"title": "Дата начала обработки персональных данных", "data": "01.10.2018"},
+          { "title": "Номер подтверждающего документа", "data": "№77-18-011300 основание внесения оператора в реестр – Приказ № 204" },
+          { "title": "Срок действия", "data": "Нет определенного срока действия (лицензия может быть отозвана в случае грубых нарушений  или ликвидации юридического лица)" }
+      ]
+    }
+  ],
   "dataFooter": {
     "title_logo2x2": "Организаторы:",
     "apply": "подать заявку",
