Added page Products

--- a/src/components/App/appData.json
+++ b/src/components/App/appData.json
@@ -66,52 +66,124 @@
       "text": "Задачи, связанные с digital-стратегий отдельных продуктов, запуском и поддержкой highload-сервисов, работой с гибридной ИТ-инфраструктурой, управлением растущими объемами данных, аналитикой всех типов. Компания имеет лицензии оператора связи и оператора персональных данных."
     }
   ],
+  "dataProducts": [
+    {
+      "items": [
+        {
+          "title": "Единый личный кабинет",
+          "text": "Обеспечивает удобство работы с любыми сервисами, построенными на нашей платформе Uma.Media. Единый аккаунт для всех проектов, полная статистика использования, доступная в онлайне, технология единого входа и прочие особенности делают взаимодействие с видеосервисами простым и быстрым."
+        },
+        {
+          "title": "Система авторизации и надежное хранение  персональных данных ",
+          "text": "Для поставщиков видеоконтента наше решение актуально благодаря защищенному хранилищу персональных данных пользователей, поддержке единого входа с использованием стандартных протоколов авторизации и аутентификации, а также доступностью сквозной аналитики по всем проектам на платформе Uma.Media."
+        }
+      ]
+    },
+    {
+      "items": [
+        {
+          "title": "Мы создали универсальную платформу для управления цифровым вещанием.",
+          "text": "Uma.Media обеспечивает настройку разных форматов взаимодействия с пользователем. Она может обеспечить live-трансляции и видео по запросу, позволяет ограничивать доступ к контенту, пригодна для распространения свободно распространяемого и платного контента."
+        },
+        {
+          "title": "Гибкая система управления контентом",
+          "text": "Платформа отличается высокой надежностью, способна работать под highload-нагрузками, может работать с устройствами разных типов и актуальна большой гибкостью в настройках. Управляемая из единого центра, она позволяет, например, кастомизировать контент или ограничивать доступность видео по географическим параметрам, по доменам, по типам устройств, распространять материалы по подписке с DRM или на условиях разового доступа с ограничением по времени. "
+        },
+        {
+          "title": "Видеоплеер",
+          "text": "Платформа работает с любыми плеерами, но мы создали свой, который может работать на любых устройствах, включая Smart TV. Особенности нашего плеера – надежность, универсальность, гибкость и широкие возможности настройки под любые модели потребления, включая сбор расширенной аналитики к кастомизации."
+        }
+      ]
+    },
+    {
+      "items": [
+        {
+          "title": "Собственный счетчик",
+          "text": "Мы создали собственный счетчик. Его особенность в большой гибкости – счетчик может быть интегрирован с любым плеером, собирать постраничные данные и детализированную видеоаналитику, может работать в привязке к авторизованным пользователям сервиса или получать анонимизированные данные."
+        },
+        {
+          "title": "Детализированная видеоаналитика",
+          "text": "Счетчик, созданный нами, был спроектирован для учета просмотров видео, но может быть настроен под любые запросы клиента, собирая расширенные метрики как для оперативных задач, так и для последующей аналитики."
+        }
+      ]
+    },
+    {
+      "items": [
+        {
+          "title": "Крупнейший оператор связи",
+          "text": "Мы входим в топ крупнейших операторов связи страны. Развитая сеть каналов, охватывающая практически всю территорию России, современная техническая инфраструктура, налаженные связи с национальными провайдерами, штат квалифицированных специалистов и широкие возможности оптимизации обеспечивают высокие скорости доставки, надежность работы, защищенность от форс-мажоров и хакерских атак."
+        },
+        {
+          "title": "Сеть",
+          "text": "Создавая нашу сеть, мы выбрали открытую политику как в выборе транзитных операторов, так и пиринговую. Сейчас у нас восемь стыков с транзитными провайдерами, включая Транстелеком, Ростелеком, Вымпелком, МегаФон и МТС, восемнадцать стыков с IX и более трех десятков пиринговых. Дата-центры компании, расположенные по всей стране, кроме связи с провайдерами также соединены друг с другом независимыми широкополосными линиями связи. Это позволяет обеспечить высочайший уровень надежности даже в условиях работы под высокими нагрузками. Сеть легко выдерживает несколько терабит пиковой нагрузки."
+        }
+      ]
+    }
+  ],
   "dataLicenses": [
     {
       "title": "Лицензия на услуги связи по передаче данных, за исключением услуг связи по передаче данных для целей передачи голосовой информации",
       "props": [
-          { "title": "Контролирующий орган", "data": "Роскомнадзор" },
-          { "title": "Дата получения", "data": "04.10.2017" },
-          { "title": "Номер подтверждающего документа", "data": "№170388" },
-          { "title": "Срок действия", "data": "30.03.2022" }
+        { "title": "Контролирующий орган", "data": "Роскомнадзор" },
+        { "title": "Дата получения", "data": "04.10.2017" },
+        { "title": "Номер подтверждающего документа", "data": "№170388" },
+        { "title": "Срок действия", "data": "30.03.2022" }
       ]
     },
     {
       "title": "Лицензия на телематические услуги связи",
       "props": [
-          { "title": "Контролирующий орган", "data": "Роскомнадзор" },
-          { "title": "Дата получения", "data": "04.10.2017" },
-          { "title": "Номер подтверждающего документа", "data": "№170388" },
-          { "title": "Срок действия", "data": "08.09.2020" }
+        { "title": "Контролирующий орган", "data": "Роскомнадзор" },
+        { "title": "Дата получения", "data": "04.10.2017" },
+        { "title": "Номер подтверждающего документа", "data": "№170388" },
+        { "title": "Срок действия", "data": "08.09.2020" }
       ]
     },
     {
       "title": "Единый реестр российских программ для электронных вычислительных машин и баз данных в информационно - телекоммуникационной сети «Интернет»",
       "props": [
-          { "title": "Министерство цифрового развития, связи и массовых коммуникаций РФ", "data": "Роскомнадзор" },
-          { "title": "Дата получения", "data": "24.04.2019" },
-          { "title": "Номер подтверждающего документа", "data": "Приказ №168 о включении Pass.Media и Uma.Media в реестр" },
-          { "title": "Срок действия", "data": "Нет определенного срока действия" }
+        {
+          "title": "Министерство цифрового развития, связи и массовых коммуникаций РФ",
+          "data": "Роскомнадзор"
+        },
+        { "title": "Дата получения", "data": "24.04.2019" },
+        {
+          "title": "Номер подтверждающего документа",
+          "data": "Приказ №168 о включении Pass.Media и Uma.Media в реестр"
+        },
+        { "title": "Срок действия", "data": "Нет определенного срока действия" }
       ]
     },
     {
       "title": "Аккредитация организации, осуществляющей деятельность в области информационных технологий",
       "props": [
-          { "title": "Контролирующий орган", "data": "Министерство цифрового развития, связи и массовых коммуникаций РФ" },
-          { "title": "Дата получения", "data": "04.10.2017" },
-          { "title": "Номер подтверждающего документа", "data": "Запись №9297" },
-          { "title": "Срок действия", "data": "Нет определенного срока действия" }
+        {
+          "title": "Контролирующий орган",
+          "data": "Министерство цифрового развития, связи и массовых коммуникаций РФ"
+        },
+        { "title": "Дата получения", "data": "04.10.2017" },
+        { "title": "Номер подтверждающего документа", "data": "Запись №9297" },
+        { "title": "Срок действия", "data": "Нет определенного срока действия" }
       ]
     },
     {
       "title": "Оператор персональных данных",
       "props": [
-          { "title": "Контролирующий орган", "data": "Роскомнадзор" },
-          { "title": "Дата выпуска приказа", "data": "28.08.2018" },
-          { "title": "", "data": "" },
-          {"title": "Дата начала обработки персональных данных", "data": "01.10.2018"},
-          { "title": "Номер подтверждающего документа", "data": "№77-18-011300 основание внесения оператора в реестр – Приказ № 204" },
-          { "title": "Срок действия", "data": "Нет определенного срока действия (лицензия может быть отозвана в случае грубых нарушений  или ликвидации юридического лица)" }
+        { "title": "Контролирующий орган", "data": "Роскомнадзор" },
+        { "title": "Дата выпуска приказа", "data": "28.08.2018" },
+        { "title": "", "data": "" },
+        {
+          "title": "Дата начала обработки персональных данных",
+          "data": "01.10.2018"
+        },
+        {
+          "title": "Номер подтверждающего документа",
+          "data": "№77-18-011300 основание внесения оператора в реестр – Приказ № 204"
+        },
+        {
+          "title": "Срок действия",
+          "data": "Нет определенного срока действия (лицензия может быть отозвана в случае грубых нарушений  или ликвидации юридического лица)"
+        }
       ]
     }
   ],
