Started page Competition

--- a/src/components/App/appData.json
+++ b/src/components/App/appData.json
@@ -120,6 +120,40 @@
       ]
     }
   ],
+  "dataCompetences": [
+    {
+      "title1": "Highload",
+      "title2": "Разработка и развитие высоконагруженных интернет-сервисов:",
+      "item_1": "Мы обладаем уникальным опытом в создании высоконагруженных цифровых сервисов для задач разных классов.",
+      "item_2": {
+        "title": "Мы умеем обеспечивать работу с BigData, от сбора, хранения и обработки данных до обогащения, аналитики и поставки моделей в продакшен.",
+        "description": "Наша инфраструктура способна обеспечить быстрый сбор данных и надежное их хранение, а квалификация команды позволяет создавать решения для обработки «цифровой руды» самыми современными способами, включая методы из области искусственного интеллекта."
+      },
+      "item_3": {
+        "title": "Мы умеем обеспечивать работу с BigData, от сбора, хранения и обработки данных до обогащения, аналитики и поставки моделей в продакшен.",
+        "description": "Наша инфраструктура способна обеспечить быстрый сбор данных и надежное их хранение, а квалификация команды позволяет создавать решения для обработки «цифровой руды» самыми современными способами, включая методы из области искусственного интеллекта."
+      },
+      "item_4": {
+        "title": "Нами созданы платформы для базовых задач обработки медиа-данных, в том числе, высокого разрешения.",
+        "description": "Наши платформы работают на высоких нагрузках и отвечают всем требованиям для современных индустриальных систем. В частности, реализована совместимость с мобильными решениями, с устройствами на платформах Smart-TV и т.д."
+      }
+    },
+    {
+      "title1": "Управление IT-инфраструктурой",
+      "title2": "Мы – профессионалы в управлении сложной распределенной инфраструктурой. В нашей сети, которая является одной из крупнейших в стране, работают свыше тысячи серверов, размещенных по геораспределенным ЦОДам.",
+      "item_1": "Продуманная архитектура ядра сети, современные скоростные коммутаторы и парк из мощнейших серверов разной специализации обеспечивают решение любых задач.",
+      "item_2": "Наша инфраструктура обладает высокой гибкостью и масштабируемостью, что позволяет оптимизировать и развивать ее для соответствия задачам заказчиков и требованию времени. Надежность инфраструктуре обеспечивает дублирование ЦОДов и каналов передачи данных.",
+      "item_3": "Высочайшую отказоустойчивость наша инфраструктуры при решении любых задач",
+      "item_4": "– от сбора и передачи данных до хранения и обработки – обеспечивают архитектурные решения, заложенные в ее основу, а также круглосуточный мониторинг и техническая поддержка, выполняемые командами высококлассных специалистов."
+    },
+    {
+      "title1": "Машинное обучение",
+      "title2": "Практические задачи современного бизнеса требуют для своего решения инновационных подходов и новейших инструментов.",
+      "item_1": "<span>Сочетание аналитики больших данных и машинного обучения позволяет решать сложнейшие бизнес-задачи.</span> Из решенных нашей командой - прогнозирование трафика, моделирование характеристик потребителей услуг и контента, обнаружение скрытых паттернов поведения аудитории. Получение такой информации из Big Data имеет крайне важное практическое значение для бизнеса, в частности, радикально увеличивает эффективность сегментирования аудитории, персонализации предложений и применения маркетинговых инструментов. ",
+      "item_2": "Наша команда способна применять самые современные подходы с использованием математического моделирования, применением решений из области искусственного интеллекта (AI).",
+      "item_3": "Возможности искусственного интеллекта в сочетании с глубинным обучением могут быть применены для самых разных задач, в частности, для «компьютерного зрения» (computer vision). Созданные нашими специалистами решения по обработке видео могут в автоматическом режиме распознавать происходящее в кадре. Применение моделей компьютерного зрения, а также моделей обработки естественного языка (natural language processing) для анализа текстовых данных открывает новые горизонты, как в производстве контента, так и в его представлении пользователю. Вместе с углублённой аналитикой потребления контента это создаёт уникальные возможности для развития бизнеса."
+    }
+  ],
   "dataLicenses": [
     {
       "title": "Лицензия на услуги связи по передаче данных, за исключением услуг связи по передаче данных для целей передачи голосовой информации",
