Started page Competition

--- a/src/components/App/appData.json
+++ b/src/components/App/appData.json
@@ -120,6 +120,36 @@
       ]
     }
   ],
+  "dataAboutPage": [
+    {
+      "title": "О нас",
+      "title2": "Мы – высокотехнологичная компания с многолетним опытом работы на рынке ИТ и телекоммуникаций.",
+      "description": "Наша история началась несколько лет назад с небольшой команды разработчиков и инженеров. Сегодня у нас большое сообщество единомышленников и профессионалов, котоые создают самые передовые технологии для медиа-индустрии и решают сложнейшие задачи видеоаналитики, оптимизации и анализа Big Data. Мы всегда стремимся вперед, предвосхищая развитие индустрии и помогая людям получать максимальное удовольствие от вселенной развлекательного контента. Uma.Tech - оператор связи, имеет лицензию оператора персональных данных."
+    },
+    {
+      "title": "Наша миссия",
+      "description": [
+        {
+          "title": "Мы строим цифровую экономику новой России",
+          "description": "создавая решения и поставляя сервисы для заказчиков и структур из разных сфер деятельности. Среди наших реальных и потенциальных клиентов – государственные предприятия и частные компании, разного размера и из различной специализации, применяющие современные технологии и реализующие «цифровую трансформацию» своей деятельности."
+        },
+        {
+          "title": "Наша инфраструктура охватывает все экономически активные регионы страны:",
+          "description": "дата-центры позволяют работать с огромными объемами данных, коммуникационные каналы – получать скоростной доступ к современному цифровому контенту, включая самые тяжелые его разновидности."
+        },
+        {
+          "title": "Мы умеем создавать цифровые решения",
+          "description": "способные развивать бизнес-процессы наших клиентов, поднимать на новый уровень эффективность основной их деятельности. Наша квалификация позволяет клиентам радикально изменять производство, внедрять инновационные технологии в управление, маркетинг и продажи. "
+        }
+      ]
+    },
+    {
+      "title": "О нас",
+      "title2": "Мы – высокотехнологичная компания с многолетним опытом работы на рынке ИТ и телекоммуникаций.",
+      "description": "Наша история началась несколько лет назад с небольшой команды разработчиков и инженеров. Сегодня у нас большое сообщество единомышленников и профессионалов, котоые создают самые передовые технологии для медиа-индустрии и решают сложнейшие задачи видеоаналитики, оптимизации и анализа Big Data. Мы всегда стремимся вперед, предвосхищая развитие индустрии и помогая людям получать максимальное удовольствие от вселенной развлекательного контента. Uma.Tech - оператор связи, имеет лицензию оператора персональных данных."
+    }
+  ],
+
   "dataCompetences": [
     {
       "title1": "Highload",
