Changed Home page

--- a/src/components/App/appData.json
+++ b/src/components/App/appData.json
@@ -54,16 +54,16 @@
   ],
   "dataAbout": [
     {
-      "title": "Мы высокотехнологичная компания с многолетним опытом работы на рынке ИТ и телекоммуникаций.",
-      "text": " Создавая комплексные решения для медиа-индустрии, мы построили одну из крупнейших федеральных сетей доставки видеоконтента, ряд уникальных технических решений и отработали гибкие бизнес-схемы, что позволяет нам удовлетворять запросы любого заказчика."
+      "title": "Уникальная команда профессионалов",
+      "text": "Инновации и технологии – то, чем живет каждый сотрудник Uma.Tech. Развитие и постоянное стремление к лучшему – в нашем ДНК. Здесь каждый талантливый человек сможет открыть для себя новые возможности, найти интересные задачи и получить уникальный опыт. Мы создаем среду, где ответственность и профессионализм будут всегда вознаграждены."
     },
     {
-      "title": "Наш опыт прекрасно отвечает запросам современного рынка.",
-      "text": "Создавая комплексные решения для медиа-индустрии, мы построили одну из крупнейших федеральных сетей доставки видеоконтента, ряд уникальных технических решений и отработали гибкие бизнес-схемы, что позволяет нам удовлетворять запросы любого заказчика."
+      "title": "Масштабные задачи и возможности",
+      "text": "Мы решаем самые непростые задачи – построение it-инфраструктуры и разработка высоконагруженных сервисов с сложной логикой, разрабатываем решения для аналитики. Каждая задача – это новые возможности для наших партнеров и развитие компетенций наших сотрудников."
     },
     {
-      "title": "Команда наших специалистов способна быстро и эффективно решить любые задачи.",
-      "text": "Задачи, связанные с digital-стратегий отдельных продуктов, запуском и поддержкой highload-сервисов, работой с гибридной ИТ-инфраструктурой, управлением растущими объемами данных, аналитикой всех типов. Компания имеет лицензии оператора связи и оператора персональных данных."
+      "title": "Широчайшая экспертиза на рынке",
+      "text": "Команда Uma.Tech создала и поддерживает одну из крупнейших в стране сетей доставки контента, располагает экспертизой и инфраструктурой для разработки highload-сервисов и работы с быстрорастущими объемами данных."
     }
   ],
   "dataProducts": [
